2025-06-07T02:05:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15503132472 # 667
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 229 263 / 230 264
* notice: next accum: outdated-unq outdated-all / unq all: 230 264 / 231 265
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-27] / [2025-06-06]

2025-05-07T02:04:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14873534347 # 636
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 228 262 / 230 264
* notice: next accum: outdated-unq outdated-all / unq all: 229 263 / 230 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-22] / []

2025-05-04T02:18:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816768603 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 227 261 / 230 264
* notice: next accum: outdated-unq outdated-all / unq all: 228 262 / 230 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-19] / []

2025-04-28T02:05:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14698717010 # 627