@@ -1,3 +1,12 @@
+2025-06-16T02:18:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15670310171 # 676
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-16
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 230 264 / 231 265
+* notice: next accum: outdated-unq outdated-all / unq all: 230 264 / 232 266
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-15]
+
 2025-06-07T02:05:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15503132472 # 667
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
